-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0
-
9db37be7210d4071c8b2c7bfa98d1822075ab452
It is possible that two threads can access the "abort" member variable in HunspellWorker at the same time, as reported by Intel Inspector 2016.
In the reported case:
- Thread_1 executes "void HunspellWorker::run()"
- Thread_2 executes "HunspellWorker::~HunspellWorker()"
As "abort" is of type bool, an unprotected access to a shared variable occurs.
- resulted in
-
QTBUG-62362 T9Write build failure on MSVC2015 due to use of QAtomicInteger<bool>
-
- Closed
-
| For Gerrit Dashboard: QTBUG-60037 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 191978,3 | Allow for separate threads accessing the abort variable at the same time | 5.9 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |