Allow for separate threads accessing the abort variable at the same time

This fixes a problem reported by Intel Inspector 2016 which indicated
that multiple threads could access the abort variable at the same time.
So by making it atomic we avoid any problems in this regard.

Task-number: QTBUG-60037
Change-Id: I79d293916f5105e8a36c41d3bc89cd1cb93e5109
Reviewed-by: Jarkko Koivikko <jarkko.koivikko@code-q.fi>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>